force-app/main/default/objects/Activity/fields/plaunch__ActivityType__c.field-meta.xml
<CustomField>
    <fullName>plaunch__ActivityType__c</fullName>
    <description>type of PipeLaunch activity</description>
    <label>ActivityType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>plaunch__Activity</valueSetName>
    </valueSet>
</CustomField>