force-app/main/default/objects/Activity/fields/plaunch__Next_Engagement__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Next_Engagement__c</fullName>
    <label>Next Engagement</label>
    <type>DateTime</type>
</CustomField>