force-app/main/default/objects/Activity/fields/plaunch__PipeLaunch__c.field-meta.xml
<CustomField>
    <fullName>plaunch__PipeLaunch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PipeLaunch relevant activities</description>
    <label>PipeLaunch</label>
    <type>Checkbox</type>
</CustomField>